Update horizontal scroll bug

--- a/app/styles/nav-bar.css
+++ b/app/styles/nav-bar.css
@@ -1,13 +1,12 @@
 .header-container {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  padding: 15px;
+  margin: 15px auto;
   font-size: 20px;
 }
 
 .header-link {
-  flex-grow: 1;
+  flex: 1;
   text-align: center;
   color: black;
 }
